# auto-cliff

./: README.md  README.rst  setup.cfg  study.py
cliff_generator/: conf.yaml.sample  config.py  shell.py
cliff_generator/cli/: __init__.py  generate.py
cliff_generator/templates/: __init__.py.empty.j2  __init__.py.j2  setup.cfg.j2  shell.py.j2  sub.py.j2
cliff_generator/templates/{package}/: shell.py.j2
cliff_generator/templates/{package}/cli/: sub.py.j2
cliff_generator/templates/{package}/utils/: rest.py
