[metadata]
name = cliff-generator
summary = A tool to generate a CLI project using cliff
author = SerenaFeng
author-email = serena.feng.711@gmail.com
home-page = https://github.com/SerenaFeng/cliff-generator
license = Apache-2.0
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cliff_generator

data_files =
#    /etc/cliff_generator = etc/*

[entry_points]
console_scripts =
    cliffg = cliff_generator.shell:main
cliffg =
    generate = cliff_generator.cli.generate:Generation

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
